<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/options">
    <!-- opens a subscreen of settings -->
    <PreferenceScreen
        android:key="@string/devices_category_key"
        android:title="@string/devices"
        android:persistent="false"
        android:icon="@drawable/device_access_usb"
        android:fragment="com.example.betarun.settings.DevicesFragment"/>
        <!-- <ListPreference
            android:key="input_device_key"
            android:title="@string/input_device"/>
        <PreferenceScreen
            android:key="output_device_key"
            android:title="@string/output_device"
            android:persistent="true">
        </PreferenceScreen>
    </PreferenceScreen> -->
    <PreferenceScreen
    	android:key="@string/visualizations_category_key"
        android:title="@string/visualizations"
        android:persistent="false"
        android:icon="@drawable/device_access_video"
        android:fragment="com.example.betarun.settings.DevicesFragment"/>
	<PreferenceScreen
    	android:key="@string/addons_category_key"
        android:title="@string/addons"
        android:persistent="false"
        android:icon="@drawable/collections_cloud"
        android:fragment="com.example.betarun.settings.DevicesFragment"/>	
</PreferenceScreen>